force-app/main/default/objects/Personal_User_Profile__c/Personal_User_Profile__c.object-meta.xml
<CustomObject>
    <label>Personal User Profile</label>
    <nameField>
        <label>Personal User Profile Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Personal User Profile</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>