force-app/main/default/objects/Personal_User_Profile__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <defaultValue>&quot;@gmail.com&quot;</defaultValue>
    <label>Email</label>
    <required>true</required>
    <type>Email</type>
</CustomField>