force-app/main/default/objects/Personal_User_Profile__c/fields/House_Expense__c.field-meta.xml
<CustomField>
    <fullName>House_Expense__c</fullName>
    <formula>Master__r.Total_Expence__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>House Expense</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>