force-app/main/default/objects/Personal_User_Profile__c/fields/Master__c.field-meta.xml
<CustomField>
    <fullName>Master__c</fullName>
    <label>User Master</label>
    <referenceTo>User_Master__c</referenceTo>
    <relationshipLabel>Personal User Profile</relationshipLabel>
    <relationshipName>Personal_User_Profile</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>