force-app/main/default/objects/Personal_User_Profile__c/fields/Overall_Expense__c.field-meta.xml
<CustomField>
    <fullName>Overall_Expense__c</fullName>
    <formula>Master__r.Total_Expence__c + Personal_Expense__c+ Pair_Shared_Expense__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Overall Expense</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>