force-app/main/default/objects/Personal_User_Profile__c/fields/Pair_Shared_Expense__c.field-meta.xml
<CustomField>
    <fullName>Pair_Shared_Expense__c</fullName>
    <label>Pair Shared Expense</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>