force-app/main/default/objects/Personal_User_Profile__c/fields/Personal_Expense__c.field-meta.xml
<CustomField>
    <fullName>Personal_Expense__c</fullName>
    <label>Personal Expense</label>
    <precision>12</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>