force-app/main/default/objects/Personal_User_Profile__c/fields/To_pay_Tejas__c.field-meta.xml
<CustomField>
    <fullName>To_pay_Tejas__c</fullName>
    <label>To pay Tejas</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>