force-app/main/default/objects/Personal_User_Profile__c/fields/Total_Monthly_Expense__c.field-meta.xml
<CustomField>
    <fullName>Total_Monthly_Expense__c</fullName>
    <label>Total Monthly Expense</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>