force-app/main/default/objects/Personal_User_Profile__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Overall_Expense__c</columns>
    <columns>Pair_Shared_Expense__c</columns>
    <columns>Personal_Expense__c</columns>
    <columns>To_Pay__c</columns>
    <columns>To_Get__c</columns>
    <columns>To_pay_Aravindh__c</columns>
    <columns>To_pay_Tejas__c</columns>
    <columns>To_pay_Yokesh__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>